# whatarewecookingtoday1244343

./: .dockerignore  .env.example  .env.local.example  .gitignore  BLOCKCHAIN_STRUCTURE.md  DEPLOYMENT.md  Dockerfile.deploy  README.md  deploy-server.mjs  docker-compose.yml  ecosystem.deploy.config.cjs  next.config.ts  package-lock.json  package.json  railway.json  tsconfig.json  tsconfig.tsbuildinfo
contracts/: bonding_curve.compact  vesting.compact
contracts/managed/bonding_curve/contract/: index.d.ts  (+2 more)
midnight-level-db/: 000005.ldb  000008.ldb  000011.ldb  000014.ldb  000017.ldb  000020.ldb  000023.ldb  000026.ldb  000029.ldb  000032.ldb  000035.ldb  LOG  LOG.old  MANIFEST-000010  MANIFEST-000034
scripts/: auto-deploy.sh  deploy-real.mjs  deploy.ts  working-versions.json
snek_fun_rust/: Cargo.toml
snek_fun_rust/crates/snekbot-core/: Cargo.toml
snek_fun_rust/crates/snekbot-core/src/: config.rs  constants.rs  lib.rs  types.rs
snek_fun_rust/crates/snekbot-persist/: Cargo.toml
snek_fun_rust/crates/snekbot-persist/src/: lib.rs  state.rs
snek_fun_rust/crates/snekbot-wallet/: Cargo.toml
snek_fun_rust/crates/snekbot-wallet/src/: address.rs  bip39.rs  lib.rs  manager.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/how-it-works/: page.tsx
src/app/launch/: page.tsx
src/app/leaderboard/: page.tsx
src/app/portfolio/: page.tsx
src/app/stats/: page.tsx
src/components/: AppShell.tsx  Navbar.tsx  PriceChart.tsx  Sidebar.tsx  Starfield.tsx  TokenCard.tsx  TopWalletBar.tsx  WalletErrorModal.tsx  WalletPickerModal.tsx  ZkWorkOverlay.tsx
src/lib/: api.ts  contractWiring.ts  indexer.ts  network.ts  trading.ts  transactions.ts
src/lib/midnight/: bondingCurve.ts
src/lib/wallet/: WalletProvider.tsx  laceStoreUrl.ts  walletErrorPresentation.ts
(+54 files in other folders)
