[package]
name = "snekbot-persist"
version = "0.1.0"
edition = "2021"

[dependencies]
snekbot-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
