[package]
name = "snekbot-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
snekbot-core = { workspace = true }
ed25519-dalek = { workspace = true }
bech32 = { workspace = true }
blake2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
